--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,12 @@ body {
 .main-calculator{
   background-color: hsl(0, 0%, 100%);
   width: 90%;
-  min-height: 400px;
+  min-height: 500px;
   border-top-left-radius: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
   border-bottom-right-radius: 20%;
 }
 
@@ -45,6 +46,7 @@ body {
   margin-bottom: 0%;
   height: 5px;
   justify-content: space-between;
+ 
 }
 
 
@@ -57,12 +59,32 @@ body {
   margin-right: 5%;
   height: 80px;
   justify-content: space-between;
-  margin-bottom: 10%;
+
+}
+
+.error-section{
+  width:90%;
+  display: flex;
+  justify-content: center; 
+  padding-top: 0px;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  /* margin-left: 8%; */
+}
+
+.the-box-error{
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 200;
 }
 
 
 .separator{
-  width: 90%;
+  width: 80%;
   height: 1px;
   background-color: hsl(0, 1%, 44%);
   position: relative;
@@ -79,7 +101,8 @@ body {
   display: flex;
   justify-content: center;   
   align-items: center;      
-  cursor: pointer;           
+  cursor: pointer;   
+  border-color:hsl(259, 100%, 65%); ;      
 }
 
 
@@ -88,13 +111,15 @@ body {
   flex-direction: column;
   width: 90%;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   justify-items: center;
   align-content: center;
   min-height: 250px;
   font-size: 50px;
   font-family: "Poppins", serif;
   font-weight: 700;
+  margin-top: 10%;
+  margin-left: 5%;
 }
 
 .result-age-main label {
@@ -121,7 +146,7 @@ body {
 
   .label-header{
     width: 60%;
-    margin-left: 10%;
+    margin-left: 5%;
   }
   
   .main-header{
@@ -133,7 +158,7 @@ body {
     height: 60px;
     border-radius: 50%;
     position: absolute;
-    left: 90%;
+    left: 95%;
     top: -25px;
   }
 
@@ -145,13 +170,43 @@ body {
     align-items: flex-start;
     justify-items: center;
     align-content: flex-start;
-    min-height: 250px;
-    font-size: 4rem;
+    min-height: 150px;
+    font-size: 5rem;
     font-family: "Poppins", serif;
     font-weight: 700;
     margin-left: 10%;
-
+    margin-bottom: 5%;
   }
+
+  .result-age-main label {
+    line-height: 0.8;
+  }
+
+  .line-result{
+    line-height: 1;
+  }
+
+
+  .error-section{
+  width:60%;
+  display: flex;
+  justify-content: center; 
+  padding-top: 0px;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  margin-left: 5%;
+  /* margin-left: 8%; */
+}
+
+.the-box-error{
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 300;
+}
 
 }
 
@@ -162,13 +217,10 @@ body {
   width: 90%;
   display: flex;
   justify-content: center; 
-  margin-left: 5%;
   padding-top: 0px;
-  margin-right: 5%;
   height: 80px;
   justify-content: space-between;
   margin-bottom: 10%;
-  
 }
 
 
@@ -186,6 +238,7 @@ body {
   width: 35%;
   justify-content: center;
   color: hsl(0, 1%, 44%); 
+  letter-spacing: 5px;
 }
 
 .the-label-error{
@@ -194,13 +247,14 @@ body {
   width: 35%;
   justify-content: center;
   color: red;
+  letter-spacing: 5px;
 }
 
 
 .input-box {
   width: 70%;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 5px;
   border: 1px solid hsl(0, 1%, 44%); 
   font-size: 18px;
   font-weight: 700;
@@ -212,15 +266,22 @@ body {
 .input-box-error {
   width: 70%;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 5px;
   border: 1px solid red;
   font-size: 18px;
   font-weight: 700;
   justify-content: center;
   text-align: center;
-  
+  margin-bottom: 4px; 
 }
 
+.error-message {
+  color: red;
+  font-size: 12px; 
+  display: block; 
+  width: 100%;
+  text-align: center;
+}
 
 
 .label-box{
